fixed appearance on mobile of smallCard and changes tab when changes to big

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ code {
   padding: 0em;
   width:100%;
   box-shadow: 0 -4px 8px 0 rgba(0, 0, 0, 0.2), 0 -6px 20px 0 rgba(0, 0, 0, 0.19);
-  position:absolute;
+  position:fixed;
   bottom:3em;
   text-align: left;
 }
